add more function

--- a/TODO
+++ b/TODO
@@ -10,7 +10,7 @@ Show More
 Done >> Handel User Moder (AbstractBaseUser) 
 Create dash board
 View role on each profile
-Access to mage role
+Access to manager role
 Ticket status Update after Edit
 update ticket if some one working on it (User X working on this ticket)
 
